--- a/productList.html
+++ b/productList.html
@@ -38,7 +38,8 @@
                 ranges: {
                     "最近3日": [moment().subtract(3, 'days'), moment()],
                     '最近7日': [moment().subtract(7, 'days'), moment()],
-                    '最近30日': [moment().subtract(30, 'days'), moment()]
+                    '最近30日': [moment().subtract(30, 'days'), moment()],
+                    '最近3个月': [moment().subtract(3, 'month'), moment()]
                 }
             };
             //时间选择
@@ -276,6 +277,16 @@
                 {
                     name:"捷安特",
                     code:"3",
+                    type:"2"
+                },
+                {
+                    name:"莫曼顿",
+                    code:"1",
+                    type:"2"
+                },
+                {
+                    name:"liv",
+                    code:"2",
                     type:"2"
                 }
             ],
