--- a/vipData.html
+++ b/vipData.html
@@ -36,7 +36,8 @@
                 ranges: {
                     "最近3日": [moment().subtract(3, 'days'), moment()],
                     '最近7日': [moment().subtract(7, 'days'), moment()],
-                    '最近30日': [moment().subtract(30, 'days'), moment()]
+                    '最近30日': [moment().subtract(30, 'days'), moment()],
+                    '最近3个月': [moment().subtract(3, 'month'), moment()]
                 }
             };
             //时间选择
