--- a/vipDrawing.html
+++ b/vipDrawing.html
@@ -40,7 +40,8 @@
                 ranges: {
                     "最近3日": [moment().subtract(3, 'days'), moment()],
                     '最近7日': [moment().subtract(7, 'days'), moment()],
-                    '最近30日': [moment().subtract(30, 'days'), moment()]
+                    '最近30日': [moment().subtract(30, 'days'), moment()],
+                    '最近3个月': [moment().subtract(3, 'month'), moment()]
                 }
             }, function (start, end, label) {
                 //格式化日期显示框
