--- a/product.html
+++ b/product.html
@@ -23,10 +23,30 @@
         });
     </script>
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+    <style>
+        .block-one > p:nth-of-type(3) {
+            text-align: left;
+            padding-left: 40%;
+        }
+        .block-one > p:nth-of-type(4) {
+            text-align: left;
+            padding-left: 40%;
+        }
+        .block-one > p:nth-of-type(5) {
+            text-align: left;
+            padding-left: 40%;
+        }
+    </style>
 </head>
 <body class="vip-change">
 <div class="loading-wrapper" style="display: none;">
-    <div class="spinner"></div>
+    <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+    </div>
 </div>
 <!--头部 开始-->
 <div class="header">
