--- a/productSell.html
+++ b/productSell.html
@@ -53,10 +53,22 @@
 </head>
 <body class="vip-change">
 <div class="loading-wrapper" id="loading1" style="display: block;">
-    <div class="spinner"></div>
+    <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+    </div>
 </div>
 <div class="loading-wrapper" id="loading2" style="display: block;">
-    <div class="spinner"></div>
+    <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+    </div>
 </div>
 <!--头部 开始-->
 <div class="header">
@@ -230,7 +242,7 @@
                         <div class="col-md-8 col-sm-8">
                             <div class="btn-group" id="vipClass">
                                 <div class="btn btn-primary">整车销售金额</div>
-                                <div class="btn btn-default">整合销售数量</div>
+                                <div class="btn btn-default">整车销售数量</div>
                                 <div class="btn btn-default">商品销售金额</div>
                                 <div class="btn btn-default">商品销售数量</div>
                             </div>
