修改会员门店产品图标

--- a/productPing.html
+++ b/productPing.html
@@ -124,13 +124,13 @@
             <ul class="nav-slide-menu">
                 <li class="nav-list home-page">
                     <a href="index.html">
-                        <i class="iconfont icon-home"></i>
+                        <img src="img/home.png" class="menu-icon">
                         首页
                     </a>
                 </li>
                 <li class="nav-list">
                     <a>
-                        <i class="iconfont icon-shuju"></i>
+                        <img src="img/user.png" class="menu-icon">
                         会员
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -151,7 +151,7 @@
                 </li>
                 <li class="nav-list home-page active">
                     <a>
-                        <i class="iconfont icon-xiaoxi"></i>
+                        <img src="img/product.png" class="menu-icon">
                         产品
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -175,7 +175,7 @@
                 </li>
                 <li class="nav-list">
                     <a>
-                        <i class="iconfont icon-shuju"></i>
+                        <img src="img/store.png" class="menu-icon">
                         门店
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
