--- a/product.html
+++ b/product.html
@@ -91,13 +91,13 @@
             <ul class="nav-slide-menu">
                 <li class="nav-list home-page">
                     <a href="index.html">
-                        <i class="iconfont icon-home"></i>
+                        <img src="img/home.png" class="menu-icon">
                         首页
                     </a>
                 </li>
                 <li class="nav-list">
                     <a>
-                        <i class="iconfont icon-shuju"></i>
+                        <img src="img/user.png" class="menu-icon">
                         会员
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -118,7 +118,7 @@
                 </li>
                 <li class="nav-list home-page active">
                     <a>
-                        <i class="iconfont icon-xiaoxi"></i>
+                        <img src="img/product.png" class="menu-icon">
                         产品
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -142,7 +142,7 @@
                 </li>
                 <li class="nav-list">
                     <a>
-                        <i class="iconfont icon-shuju"></i>
+                        <img src="img/store.png" class="menu-icon">
                         门店
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -207,7 +207,7 @@
 </div>
 <script>
     $(function () {
-        $.fn.pageData = function () {
+//        $.fn.pageData = function () {
             var quotaData;//指标数据
             //获取数据
             var filter = {
@@ -244,9 +244,9 @@
             }
 
             getQuotaData();
-        };
+//        };
         //回调函数
-        $.fn.isSign($.fn.pageData);
+//        $.fn.isSign($.fn.pageData);
     });
 </script>
 </body>
