--- a/storeList.html
+++ b/storeList.html
@@ -110,13 +110,13 @@
             <ul class="nav-slide-menu">
                 <li class="nav-list home-page">
                     <a href="index.html">
-                        <i class="iconfont icon-home"></i>
+                        <img src="img/home.png" class="menu-icon">
                         首页
                     </a>
                 </li>
                 <li class="nav-list">
                     <a>
-                        <i class="iconfont icon-shuju"></i>
+                        <img src="img/user.png" class="menu-icon">
                         会员
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -137,7 +137,7 @@
                 </li>
                 <li class="nav-list home-page">
                     <a>
-                        <i class="iconfont icon-xiaoxi"></i>
+                        <img src="img/product.png" class="menu-icon">
                         产品
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
@@ -161,7 +161,7 @@
                 </li>
                 <li class="nav-list active">
                     <a>
-                        <i class="iconfont icon-shuju"></i>
+                        <img src="img/store.png" class="menu-icon">
                         门店
                         <i class="iconfont icon-fangxiangyou"></i>
                     </a>
